@@ -18,6 +18,16 @@
 
 package org.apache.kylin.dict.global;
 
+import static com.google.common.base.Preconditions.checkArgument;
+import static com.google.common.base.Preconditions.checkState;
+
+import java.io.IOException;
+import java.util.Arrays;
+import java.util.Locale;
+import java.util.Map;
+import java.util.TreeMap;
+import java.util.TreeSet;
+
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.fs.FSDataInputStream;
 import org.apache.hadoop.fs.FSDataOutputStream;
@@ -33,21 +43,12 @@ import org.apache.kylin.dict.BytesConverter;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.io.IOException;
-import java.util.Arrays;
-import java.util.Map;
-import java.util.TreeMap;
-import java.util.TreeSet;
-
-import static com.google.common.base.Preconditions.checkArgument;
-import static com.google.common.base.Preconditions.checkState;
-
 public class GlobalDictHDFSStore extends GlobalDictStore {
 
     static final Logger logger = LoggerFactory.getLogger(GlobalDictHDFSStore.class);
     static final String V1_INDEX_NAME = ".index";
-    static final String V2_INDEX_NAME = ".index_v2";
-    static final String VERSION_PREFIX = "version_";
+    public static final String V2_INDEX_NAME = ".index_v2";
+    public static final String VERSION_PREFIX = "version_";
     static final int BUFFER_SIZE = 8 * 1024 * 1024;
 
     private final Path basePath;
@@ -59,13 +60,6 @@ public class GlobalDictHDFSStore extends GlobalDictStore {
         this.basePath = new Path(baseDir);
         this.conf = HadoopUtil.getCurrentConfiguration();
         this.fileSystem = HadoopUtil.getFileSystem(baseDir);
-
-        if (!fileSystem.exists(basePath)) {
-            logger.info("Global dict at {} doesn't exist, create a new one", basePath);
-            fileSystem.mkdirs(basePath);
-        }
-
-        migrateOldLayout();
     }
 
     // Previously we put slice files and index file directly in base directory,
@@ -111,18 +105,25 @@ public class GlobalDictHDFSStore extends GlobalDictStore {
     }
 
     @Override
-    void prepareForWrite(String workingDir) throws IOException {
-        // TODO create lock file
+    void prepareForWrite(String workingDir, boolean isGlobal) throws IOException {
+        if (!fileSystem.exists(basePath)) {
+            logger.info("Global dict at {} doesn't exist, create a new one", basePath);
+            fileSystem.mkdirs(basePath);
+        }
+
+        migrateOldLayout();
+
+        logger.trace("Prepare to write Global dict at {}, isGlobal={}", workingDir, isGlobal);
         Path working = new Path(workingDir);
 
         if (fileSystem.exists(working)) {
             fileSystem.delete(working, true);
-            logger.info("Working directory {} exits, delete it first", working);
+            logger.trace("Working directory {} exits, delete it first", working);
         }
 
         // when build dict, copy all data into working dir and work on it, avoiding suddenly server crash made data corrupt
         Long[] versions = listAllVersions();
-        if (versions.length > 0) {
+        if (versions.length > 0 && isGlobal) {
             Path latestVersion = getVersionDir(versions[versions.length - 1]);
             FileUtil.copy(fileSystem, latestVersion, fileSystem, working, false, true, conf);
         } else {
@@ -132,6 +133,10 @@ public class GlobalDictHDFSStore extends GlobalDictStore {
 
     @Override
     public Long[] listAllVersions() throws IOException {
+        if (!fileSystem.exists(basePath)) {
+            return new Long[0]; // for the removed SegmentAppendTrieDictBuilder
+        }
+
         FileStatus[] versionDirs = fileSystem.listStatus(basePath, new PathFilter() {
             @Override
             public boolean accept(Path path) {
@@ -178,7 +183,7 @@ public class GlobalDictHDFSStore extends GlobalDictStore {
     @Override
     public AppendDictSlice readSlice(String directory, String sliceFileName) throws IOException {
         Path path = new Path(directory, sliceFileName);
-        logger.info("read slice from {}", path);
+        logger.trace("read slice from {}", path);
         try (FSDataInputStream input = fileSystem.open(path, BUFFER_SIZE)) {
             return AppendDictSlice.deserializeFrom(input);
         }
@@ -190,7 +195,7 @@ public class GlobalDictHDFSStore extends GlobalDictStore {
         String sliceFile = IndexFormatV2.sliceFileName(key);
         Path path = new Path(workingDir, sliceFile);
 
-        logger.info("write slice with key {} into file {}", key, path);
+        logger.trace("write slice with key {} into file {}", key, path);
         try (FSDataOutputStream out = fileSystem.create(path, true, BUFFER_SIZE)) {
             byte[] bytes = slice.buildTrieBytes();
             out.write(bytes);
@@ -201,14 +206,14 @@ public class GlobalDictHDFSStore extends GlobalDictStore {
     @Override
     public void deleteSlice(String workingDir, String sliceFileName) throws IOException {
         Path path = new Path(workingDir, sliceFileName);
-        logger.info("delete slice at {}", path);
+        logger.trace("delete slice at {}", path);
         if (fileSystem.exists(path)) {
             fileSystem.delete(path, false);
         }
     }
 
     @Override
-    public void commit(String workingDir, GlobalDictMetadata metadata) throws IOException {
+    public void commit(String workingDir, GlobalDictMetadata metadata, boolean isAppendDictGlobal) throws IOException {
         Path workingPath = new Path(workingDir);
 
         // delete v1 index file
@@ -225,25 +230,44 @@ public class GlobalDictHDFSStore extends GlobalDictStore {
         Path newVersionPath = new Path(basePath, VERSION_PREFIX + System.currentTimeMillis());
         fileSystem.rename(workingPath, newVersionPath);
 
-        cleanUp();
+        cleanUp(isAppendDictGlobal);
     }
 
     // Check versions count, delete expired versions
-    private void cleanUp() throws IOException {
-        Long[] versions = listAllVersions();
+    private void cleanUp(boolean isAppendDictGlobal) throws IOException {
         long timestamp = System.currentTimeMillis();
-        for (int i = 0; i < versions.length - maxVersions; i++) {
-            if (versions[i] + versionTTL < timestamp) {
-                fileSystem.delete(getVersionDir(versions[i]), true);
+        if (isAppendDictGlobal) {
+            Long[] versions = listAllVersions();
+            for (int i = 0; i < versions.length - maxVersions; i++) {
+                if (versions[i] + versionTTL < timestamp) {
+                    fileSystem.delete(getVersionDir(versions[i]), true);
+                }
+            }
+        } else {
+            FileStatus[] segmentDictDirs = fileSystem.listStatus(basePath.getParent());
+            for (FileStatus fileStatus : segmentDictDirs) {
+                String filePath = fileStatus.getPath().getName();
+                Long version = Long.parseLong(filePath.split("_")[1]);
+                if (version + versionTTL < timestamp) {
+                    fileSystem.delete(new Path(basePath.getParent() + "/" + filePath), true);
+                }
             }
         }
     }
 
     @Override
     public String copyToAnotherMeta(KylinConfig srcConfig, KylinConfig dstConfig) throws IOException {
-        checkArgument(baseDir.startsWith(srcConfig.getHdfsWorkingDirectory()), "Please check why current directory {} doesn't belong to source working directory {}", baseDir, srcConfig.getHdfsWorkingDirectory());
+        if (baseDir.contains("resources/SegmentDict")) {
+            logger.info("SegmentAppendTrieDict needn't to copy");
+            return baseDir;
+        }
 
-        final String dstBaseDir = baseDir.replaceFirst(srcConfig.getHdfsWorkingDirectory(), dstConfig.getHdfsWorkingDirectory());
+        checkArgument(baseDir.startsWith(srcConfig.getHdfsWorkingDirectory()),
+                "Please check why current directory {} doesn't belong to source working directory {}", baseDir,
+                srcConfig.getHdfsWorkingDirectory());
+
+        final String dstBaseDir = baseDir.replaceFirst(srcConfig.getHdfsWorkingDirectory(),
+                dstConfig.getHdfsWorkingDirectory());
 
         Long[] versions = listAllVersions();
         if (versions.length == 0) { // empty dict, nothing to copy
@@ -251,7 +275,8 @@ public class GlobalDictHDFSStore extends GlobalDictStore {
         }
 
         Path srcVersionDir = getVersionDir(versions[versions.length - 1]);
-        Path dstVersionDir = new Path(srcVersionDir.toString().replaceFirst(srcConfig.getHdfsWorkingDirectory(), dstConfig.getHdfsWorkingDirectory()));
+        Path dstVersionDir = new Path(srcVersionDir.toString().replaceFirst(srcConfig.getHdfsWorkingDirectory(),
+                dstConfig.getHdfsWorkingDirectory()));
         FileSystem dstFS = dstVersionDir.getFileSystem(conf);
         if (dstFS.exists(dstVersionDir)) {
             dstFS.delete(dstVersionDir, true);
@@ -275,7 +300,7 @@ public class GlobalDictHDFSStore extends GlobalDictStore {
         protected final FileSystem fs;
         protected final Configuration conf;
 
-        protected IndexFormatV1(FileSystem fs, Configuration conf) {
+        public IndexFormatV1(FileSystem fs, Configuration conf) {
             this.fs = fs;
             this.conf = conf;
         }
@@ -291,7 +316,7 @@ public class GlobalDictHDFSStore extends GlobalDictStore {
                 String converterName = in.readUTF();
                 BytesConverter converter;
                 try {
-                    converter = ClassUtil.forName(converterName, BytesConverter.class).newInstance();
+                    converter = ClassUtil.forName(converterName, BytesConverter.class).getDeclaredConstructor().newInstance();
                 } catch (Exception e) {
                     throw new RuntimeException("Fail to instantiate BytesConverter: " + converterName, e);
                 }
@@ -361,7 +386,7 @@ public class GlobalDictHDFSStore extends GlobalDictStore {
                 String converterName = in.readUTF();
                 BytesConverter converter;
                 try {
-                    converter = ClassUtil.forName(converterName, BytesConverter.class).newInstance();
+                    converter = ClassUtil.forName(converterName, BytesConverter.class).getDeclaredConstructor().newInstance();
                 } catch (Exception e) {
                     throw new RuntimeException("Fail to instantiate BytesConverter: " + converterName, e);
                 }
@@ -401,13 +426,14 @@ public class GlobalDictHDFSStore extends GlobalDictStore {
         public void sanityCheck(Path dir, GlobalDictMetadata metadata) throws IOException {
             for (Map.Entry<AppendDictSliceKey, String> entry : metadata.sliceFileMap.entrySet()) {
                 if (!fs.exists(new Path(dir, entry.getValue()))) {
-                    throw new RuntimeException("The slice file " + entry.getValue() + " for the key: " + entry.getKey() + " must be existed!");
+                    throw new RuntimeException("The slice file " + entry.getValue() + " for the key: " + entry.getKey()
+                            + " must be existed!");
                 }
             }
         }
 
         public static String sliceFileName(AppendDictSliceKey key) {
-            return String.format("%s%d_%d", SLICE_PREFIX, System.currentTimeMillis(), key.hashCode());
+            return String.format(Locale.ROOT, "%s%d_%d", SLICE_PREFIX, System.currentTimeMillis(), key.hashCode());
         }
     }
 }
